Mon Jun 13 13:37:48 GMT 2011  Richard Boulton <richard@tartarus.org>

	* python/extra.i: Change function names defined inside wrapper()
	  closures to match the name which the result of the closure will
	  be assigned to, so that help text for the functions displays the
	  correct function name.

Mon Jun 13 13:15:00 GMT 2011  Richard Boulton <richard@tartarus.org>

	* python/pythontest2.py: Extend coverage of tests of removed features.

Mon Jun 13 12:56:48 GMT 2011  Olly Betts <olly@survex.com>

	* java/native/Enquire.cc: Update for Enquire::set_sort_by_value()
	  change.

Mon Jun 13 12:50:39 GMT 2011  Richard Boulton <richard@tartarus.org>

	* python/pythontest2.py: Change checks for removed attributes to
	  use a neater approach.

Mon Jun 13 12:48:00 GMT 2011  Richard Boulton <richard@tartarus.org>

	* python/testsuite2.py: Add support to expect_exception for passing
	  None as the message, to skip checking the message for the raised
	  exception.  Add documentation comment describing the parameters.

Mon Jun 13 12:37:31 GMT 2011  Olly Betts <olly@survex.com>

	* xapian.i: Remove deprecated Enquire::set_sort_by_* methods.

Mon Jun 13 12:10:39 GMT 2011  Olly Betts <olly@survex.com>

	* python/extra.i: Remove checks for deprecated forms of Enquire
	  set_sort_* methods, which have now been removed from the C++ API.

Mon Jun 13 11:43:20 GMT 2011  Olly Betts <olly@survex.com>

	* python/extra.i,python/util.i: Hide away the deprecated non-pythonic
	  iterators - we still need them to implement the pythonic iterators,
	  so we can't entirely remove them.
	* python/pythontest2.py: Check that the deprecated methods are no
	  longer accessible (not all methods are checked).
	* docs/index.html: Update documentation to say they've been removed.

Mon Jun 13 10:35:29 GMT 2011  Olly Betts <olly@survex.com>

	* python/extra.i: Remove deprecated Stem_get_available_languages().
	* python/pythontest2.py: Add test to make sure it stays removed!
